# veto

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  install.sh  mise.toml  uninstall.sh
.github/workflows/: release.yml
docs/: authentication.md  claude-code.md  commands.md  configuration.md  cursorcli.md  geminicli.md  installation.md  opencode.md  rules.md  troubleshooting.md
scripts/: pre-push-tag-check.sh
src/: audit.rs  main.rs
src/auth/: challenge.rs  confirm.rs  dialog.rs  keyring.rs  manager.rs  mod.rs  pin.rs  telegram.rs  totp.rs  touchid.rs  touchid_helper.swift
src/cli/: mod.rs
src/commands/: auth.rs  doctor.rs  init.rs  log.rs  mod.rs  setup.rs  shell.rs  upgrade.rs
src/config/: loader.rs  mod.rs  types.rs
src/executor/: mod.rs  shell.rs
src/rules/: defaults.rs  engine.rs  mod.rs  types.rs
video/: package-lock.json  package.json  tsconfig.json
video/src/: Root.tsx
video/src/components/: AuthMethods.tsx  AuthPrompt.tsx  DisasterScene.tsx  FeatureList.tsx  FlowDiagram.tsx  GeometricBackground.tsx  GlitchText.tsx  Logo.tsx  Particles.tsx  ProgressBar.tsx  RiskBadge.tsx  RiskTags.tsx  ScanLine.tsx  ShockWave.tsx  Terminal.tsx  TypewriterText.tsx  VHSEffect.tsx
video/src/compositions/: VetoIntro.tsx
