[package]
name = "veto"
version = "0.1.0"
edition = "2021"
description = "AI operation guardian - verify before execute"
license = "MIT"
repository = "https://github.com/runkids/veto"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
glob = "0.3"
regex = "1"
colored = "2"
dialoguer = "0.11"
dirs = "5"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
